--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <title>bootstrapsuperhero</title>
     <link rel ="stylesheet" href="main.css">
+
+    <title>SuperSkilz</title>
 </head>
-<body>
+<body class ="text-center">
   
 <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -20,18 +21,19 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Superskilz</a>
+            <a class="navbar-brand" href="/">SuperSkilz</a>
           </div>
       
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/views/superhero.html">Superheroz</a></li>
+              <li><a href="/views/superhero.html">Superheroes</a></li>
               <li><a href="/views/jobs.html">Jobs</a></li> 
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
-    <script src="jobs.js"></script>
+      <h2>Helping retired superheroes find new jobs since 1995.</h2>
+      <img src="https://images-na.ssl-images-amazon.com/images/I/61JKHDOYPDL.jpg">
 </body>
 </html>
